src/main/java/org/example/error/exception/SyntacticException.java
package org.example.error.exception;

public class SyntacticException extends Exception {

	public SyntacticException(String errorMessage) {
		super(errorMessage);
	}

}
